content updates to gov pay partial and PCN notice pages

--- a/app/views/v6-pcn/gov-pay-partial.html
+++ b/app/views/v6-pcn/gov-pay-partial.html
@@ -19,7 +19,7 @@ GOV.UK prototype kit
         <div class="payment-summary">
           <h2 class="nhsuk-heading-l">Payment summary</h2>
           <p id="payment-description" class="nhsk-body" style="font-size:19px;">
-            12 months single payment
+            Payment for your prescription penalty charge
           </p>
 
           <p class="govuk-body govuk-!-margin-bottom-0" style="font-size:19px;">
