--- a/app/views/v6-pcn/penalty-charge-notice-details-bsa.html
+++ b/app/views/v6-pcn/penalty-charge-notice-details-bsa.html
@@ -260,7 +260,7 @@
           Address
         </dt>
         <dd class="nhsuk-summary-list__value">
-          12 Old Oak Road<br>Throckley<br> NE67 9AD
+          12 Old Oak Road<br>Throckley<br> NE2 4XL
         </dd>
 
       </div>
