Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -461,6 +461,18 @@ NHS.UK prototype kit
             </tr>
 
           </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Payment cancelled</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/error-messages/payment-has-been-cancelled">Payment cancelled
+                  failed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
         </table>
 
         <h3>Done pages</h3>
