--- a/app/views/v5-enquiry/adhoc-screens/enquiry-letter-details-locked-decs.html
+++ b/app/views/v5-enquiry/adhoc-screens/enquiry-letter-details-locked-decs.html
@@ -47,20 +47,20 @@
             Do not delay
           </span>
         </h3>
-        <p>You now have 28 days to confirm you were entitled to free NHS prescriptions (by 28 March 2018). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
+        <p>You now have 28 days to confirm you were entitled to free or reduced cost NHS dental treatment (by 28 March 2018). If you can confirm this, it will resolve the issue and stop you getting a penalty charge.</p>
       </div>
      
     
        <h2>Check your details carefully</h2>
 
-       <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
-      <p>We have not been able to confirm you were entitled to free NHS prescriptions using these details.</p>
+       <p>We check details on your dental form match the details on your exemption certificate or qualifying benefit.</p>
+      <p>We have not been able to confirm you were entitled to free or reduced cost NHS dental treatment using these details.</p>
       <dl class="nhsuk-summary-list">
 
         
       
         
-      <h3>Details on the prescription</h3>
+      <h3>Details on the the dental treatment form</h3>
       <dl class="nhsuk-summary-list">
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
@@ -87,7 +87,7 @@
             Exemption reason ticked
           </dt>
           <dd class="nhsuk-summary-list__value">
-            <p>Gets Income Support or income-related Employment and Support Allowance.</p>
+            <p>Gets Universal Credit.</p>
             
           </dd>
       
@@ -95,7 +95,7 @@
 
         <div class="nhsuk-summary-list__row">
           <dt class="nhsuk-summary-list__key">
-            Date prescription was claimed
+            Date dental treatment was claimed
           </dt>
           <dd class="nhsuk-summary-list__value">
             <p>Between 1 November and 30 November 2017.</p>
