--- a/app/views/v5-enquiry/adhoc-screens/case-closed.html
+++ b/app/views/v5-enquiry/adhoc-screens/case-closed.html
@@ -34,8 +34,8 @@ An exemption has been found
 
 
 
-    <p><a href="">Contact us if you have any other queries.</a></p>
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Print this page</a></p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any other queries.</a></p>
+    <p><a href="">Print this page</a></p>
 
   </div>
 </div>
