Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -263,8 +263,18 @@ NHS.UK prototype kit
               <tr role="row" class="nhsuk-table__row">
                 <td class="nhsuk-table__cell">Locked enquiry letter</td>
                 <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/enquiry-letter-details-locked">Case locked</a></td>
-                <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-                  BOTH
+                <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
+                  PECS
+                </strong></td>
+              </tr>
+  
+            </tbody>
+            <tbody class="nhsuk-table__body">
+              <tr role="row" class="nhsuk-table__row">
+                <td class="nhsuk-table__cell">Locked enquiry letter</td>
+                <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/enquiry-letter-details-locked-DECS">Case locked - DECS</a></td>
+                <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                  DECS
                 </strong></td>
               </tr>
   
