Added start and CYA page iterations with refund guidance and content trim

--- a/docs/views/template.html
+++ b/docs/views/template.html
@@ -102,7 +102,7 @@
                 BETA
               </strong>
               <span class="nhsuk-phase-banner__text">
-                This is a new service – your <a class="nhsuk-link" href="#">feedback</a> will help us to improve it.
+                This is a new service – your <a class="nhsuk-link" href="https://online1.snapsurveys.com/interview/6a165693-7cb5-4397-a2cf-f21fb14613a0">feedback</a> will help us to improve it.
               </span>
             </p>
           </div>
