Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -234,20 +234,28 @@ NHS.UK prototype kit
 
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-plain">User
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm">User
                   enters enquiry reference number before receiving letter</a></td>
-              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
-                  BOTH
-                </strong></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
+                PECS
+              </strong></td>
             </tr>
             <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm-decs">User
+                  enters enquiry reference number before receiving letter</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
+            </tr>
+            <!-- <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">We cannot confirm you were entitled - Inset text</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-inset">User
                   enters enquiry reference number before receiving letter</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
-            </tr>
+            </tr> -->
 
         
             <tr role="row" class="nhsuk-table__row">
