--- a/app/views/v5-enquiry/respond-to-your-letter.html
+++ b/app/views/v5-enquiry/respond-to-your-letter.html
@@ -1,64 +1,56 @@
 {% extends 'layout.html' %}
 
 {% block pageTitle %}
-<header class="nhsuk-header nhsuk-header--transactional" role="banner">
-  <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
-
-        <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
-          <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
-        </svg>
-
-      </a>
-    </div>
-    <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
-    </div>
-
-  </div>
-
-</header>
+Respond to your letter
 {% endblock %}
 
 
 
 
 {% block content %}
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-      
-
-      <h1>
-        Respond to your letter 
-      </h1>
-
-      <p>Use this service to:</p>
-      <ul>
-        <li>confirm you were entitled to help with your health costs</li>
-        <li>pay a Penalty Charge Notice if you were not exempt</li>
-       
-      </ul>
-      <h2 class="nhsuk-heading-l">Before you start</h2>
-      <p>You will need your reference number. You can find this on your letter.</p>
-      <p> <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have lost your letter</a>.</p>
-      <p>If you were entitled to help with your health costs it may help to have your exemption certificate or benefits information ready.</p>
-      <p>If you get Universal Credit, your entitlement to help with your health costs depends on your take-home pay in the last assessment period.</p>
-      <p> <a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits/hwhc-universal-credit">Read more about Universal Credit exemptions</a>.</p>
-      <p>If you are not sure if you were entitled you can <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">check if you are currently entitled to help with your health costs</a>.</p>
-      <p>If you are paying a Penalty Charge Notice you will need your card details. You can pay be credit or debit card, or by Direct Debit.</p>
-       <a href="enter-reference-number" class="nhsuk-button">
-        Start now
-      </a>
-      
-     
-
-       <h3>How we use your information</h3>
-
-       <p>We use the information you provide to help us match your details. You can find out more about <a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice" target="_blank">how we use your information</a>.</p>
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
 
 
-    </div>
+    <h1>
+      Respond to your letter
+    </h1>
+
+    <p>Use this service to:</p>
+    <ul>
+      <li>confirm you were entitled to help with your health costs</li>
+      <li>pay a Penalty Charge Notice if you were not exempt</li>
+
+    </ul>
+    <h2 class="nhsuk-heading-l">Before you start</h2>
+    <p>You will need your reference number. You can find this on your letter.</p>
+    <p> <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have lost your letter</a>.
+    </p>
+    <p>If you were entitled to help with your health costs it may help to have your exemption certificate or benefits
+      information ready.</p>
+    <p>If you get Universal Credit, your entitlement to help with your health costs depends on your take-home pay in the
+      last assessment period.</p>
+    <p> <a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits/hwhc-universal-credit">Read
+        more about Universal Credit exemptions</a>.</p>
+    <p>If you are not sure if you were entitled you can <a
+        href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">check if you are currently entitled
+        to help with your health costs</a>.</p>
+    <p>If you are paying a Penalty Charge Notice you will need your card details. You can pay be credit or debit card,
+      or by Direct Debit.</p>
+    <a href="enter-reference-number" class="nhsuk-button">
+      Start now
+    </a>
+
+
+
+    <h3>How we use your information</h3>
+
+    <p>We use the information you provide to help us match your details. You can find out more about <a
+        href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice" target="_blank">how we
+        use your information</a>.</p>
+
 
   </div>
+
+</div>
 {% endblock %}
