Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -232,7 +232,7 @@ NHS.UK prototype kit
                 </strong></td>
             </tr>
 
-            <tr role="row" class="nhsuk-table__row">
+            <!-- <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm">User
                   enters enquiry reference number before receiving letter</a></td>
@@ -247,7 +247,7 @@ NHS.UK prototype kit
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                 DECS
               </strong></td>
-            </tr>
+            </tr> -->
             <!-- <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">We cannot confirm you were entitled - Inset text</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-cannot-confirm-entitled-inset">User
