Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/v5-enquiry/adhoc-screens/case-closed.html
+++ b/app/views/v5-enquiry/adhoc-screens/case-closed.html
@@ -9,7 +9,7 @@ An exemption has been found
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <h1>Your case has already been closed</h1>
+    <h1 class="nhsuk-heading-l">Your case has already been closed</h1>
 
 
 
