--- a/app/views/v5-enquiry/adhoc-screens/call-us-about-your-pcn.html
+++ b/app/views/v5-enquiry/adhoc-screens/call-us-about-your-pcn.html
@@ -10,7 +10,7 @@ You cannot use this service yet
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-m">Your details</span>
-      <h1>
+      <h1 class="nhsuk-heading-l">
        You cannot use this service yet
       </h1>
     
