--- a/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
+++ b/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
@@ -27,7 +27,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-m">Your details</span>
-      <h1>
+      <h1 class="nhsuk-heading-l">
        More information needed
       </h1>
     
