--- a/app/views/v6-pcn/cookies/our-cookies.html
+++ b/app/views/v6-pcn/cookies/our-cookies.html
@@ -3,24 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-<header class="nhsuk-header nhsuk-header--transactional" role="banner">
-  <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
-
-        <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
-          <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
-        </svg>
-
-      </a>
-    </div>
-    <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
-    </div>
-
-  </div>
-
-</header>
+Cookies on the Respond to your letter website
 {% endblock %}
 
 {% block outerContent %}
@@ -32,7 +15,7 @@
   <div class="nhsuk-grid-column-two-thirds">
 
     <form action="check-name-input" method="get" class="form">
-      <span class="nhsuk-caption-m">Respond to your letter</span>
+
 
       
       <h1 class="nhsuk-heading-xl">Cookies on the Respond to your letter website</h1>
@@ -117,9 +100,9 @@
 <p>Some cookies, like those needed to measure how you use our website, are not needed for our website to work.</p>
 <p>These cookies can help us make our website better, but we'll only use them if you say it's OK.</p>
 
-<button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+<a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="cookie-consent">
   Choose which cookies we use
-</button>
+</a>
 
 <h2>How we use the information we collect</h2>
 <p>To find out about how we collect, store and use information about you or your visit, see the <a href="https://www.nhsbsa.nhs.uk/our-policies/privacy">NHSBSA website privacy policy.</a> </p>
