--- a/app/views/v6-pcn/cookies/cookie-consent.html
+++ b/app/views/v6-pcn/cookies/cookie-consent.html
@@ -31,62 +31,58 @@ Choose which cookies we use
               List of cookies that measure website use
             </span>
           </summary>
-          <dl class="nhsuk-summary-list">
-
-            <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                Cookie name
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                <b>Purpose</b>
-              </dd>
-              <dd class="nhsuk-summary-list__value">
-                <b>Expiry</b>
-              </dd>
-
-            </div>
-
-            <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                _gat
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                Used by Google Analytics, this helps Google Analytics web servers from crashing when collecting
-                information on how you use our website
-              </dd>
-              <dd class="nhsuk-summary-list__value">
-                1 minute
-              </dd>
-
-            </div>
-
-            <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                _gid
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                Used by Google Analytics, set's a unique ID for your session to help tell us how you use our website
-              </dd>
-              <dd class="nhsuk-summary-list__value">
-                24 hours
-              </dd>
-
-            </div>
-
-            <div class="nhsuk-summary-list__row">
-              <dt class="nhsuk-summary-list__key">
-                _ga
-              </dt>
-              <dd class="nhsuk-summary-list__value">
-                <p>Used to distinguish users for analytical purposes</p>
-              </dd>
-              <dd class="nhsuk-summary-list__value">
-                2 years
-              </dd>
-
-            </div>
-
-          </dl>
+          <table role="table" class="nhsuk-table-responsive">
+  
+            <thead role="rowgroup" class="nhsuk-table__head">
+              <tr role="row">
+                <th role="columnheader" class="" scope="col">
+                  Cookie name
+                </th>
+                <th role="columnheader" class="" scope="col">
+                  Purpose
+                </th>
+                <th role="columnheader" class="" scope="col">
+                  Expiry
+                </th>
+              </tr>
+            </thead>
+            <tbody class="nhsuk-table__body">
+              <tr role="row" class="nhsuk-table__row">
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Cookie name </span>_gat
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Purpose </span>Used by Google Analytics, this helps Google Analytics web servers from crashing when collecting information on how you use our website
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Expiry </span>1 minute
+                </td>
+              </tr>
+              <tr role="row" class="nhsuk-table__row">
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Cookie name </span>_gid
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Purpose </span>Used by Google Analytics, set's a unique ID for your session to help tell us how you use our website
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Expiry </span>24 hours
+                </td>
+              </tr>
+              <tr role="row" class="nhsuk-table__row">
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Cookie name </span>_ga
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Purpose </span>Used to distinguish users for analytical purposes
+                </td>
+                <td role="cell" class="nhsuk-table__cell">
+                  <span class="nhsuk-table-responsive__heading">Expiry </span>2 years
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          </details>
         </details>
 
         <div class="nhsuk-form-group">
