Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/v6-pcn/cookies/cookie-consent.html
+++ b/app/views/v6-pcn/cookies/cookie-consent.html
@@ -17,7 +17,7 @@ Choose which cookies we use
     <form action="check-name-input" method="get" class="form">
 
 
-      <h1 class="nhsuk-heading-xl">Choose which cookies we use</h1>
+      <h1 class="nhsuk-heading-l">Choose which cookies we use</h1>
       <div class="nhsuk-form-group">
 
         <p>Let us know which cookies we can use. We'll use a cookie to save your settings for the next 90 days. This
