--- a/app/views/v6-pcn/cookies/our-cookies.html
+++ b/app/views/v6-pcn/cookies/our-cookies.html
@@ -18,7 +18,7 @@ Cookies on the Respond to your letter website
 
 
       
-      <h1 class="nhsuk-heading-xl">Cookies on the Respond to your letter website</h1>
+      <h1 class="nhsuk-heading-l">Cookies on the Respond to your letter website</h1>
       <div class="nhsuk-form-group">
         <h2>What are cookies?</h2>
 
