Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/v6-pcn/how-to-pay-2.html
+++ b/app/views/v6-pcn/how-to-pay-2.html
@@ -43,7 +43,7 @@ You didn't have a valid medical exemption certificate
           <p>When asked to enter the amount you are paying, you just need to type <strong>£9.65</strong> (not the full Penalty Charge Notice amount)</p>
          
       
-            <a class="nhsuk-button" href="pay-by-card">Pay now</a>
+            <a class="nhsuk-button" href="gov-pay-prescription">Pay now</a>
           
           
 
