--- a/app/views/v6-pcn/cannot-find-details-matex.html
+++ b/app/views/v6-pcn/cannot-find-details-matex.html
@@ -3,24 +3,7 @@
 {% set mainClasses = "nhsuk-main-wrapper--s" %}
 
 {% block pageTitle %}
-<header class="nhsuk-header nhsuk-header--transactional" role="banner">
-  <div class="nhsuk-width-container nhsuk-header__container">
-    <div class="nhsuk-header__logo nhsuk-header__logo--only"><a class="nhsuk-header__link" href="/" aria-label="NHS homepage">
-
-        <svg class="nhsuk-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 16" height="40" width="100">
-          <path class="nhsuk-logo__background" fill="#005eb8" d="M0 0h40v16H0z"></path>
-          <path class="nhsuk-logo__text" fill="#fff" d="M3.9 1.5h4.4l2.6 9h.1l1.8-9h3.3l-2.8 13H9l-2.7-9h-.1l-1.8 9H1.1M17.3 1.5h3.6l-1 4.9h4L25 1.5h3.5l-2.7 13h-3.5l1.1-5.6h-4.1l-1.2 5.6h-3.4M37.7 4.4c-.7-.3-1.6-.6-2.9-.6-1.4 0-2.5.2-2.5 1.3 0 1.8 5.1 1.2 5.1 5.1 0 3.6-3.3 4.5-6.4 4.5-1.3 0-2.9-.3-4-.7l.8-2.7c.7.4 2.1.7 3.2.7s2.8-.2 2.8-1.5c0-2.1-5.1-1.3-5.1-5 0-3.4 2.9-4.4 5.8-4.4 1.6 0 3.1.2 4 .6"></path>
-        </svg>
-
-      </a>
-    </div>
-    <div class="nhsuk-header__transactional-service-name">
-      <a class="nhsuk-header__transactional-service-name--link" href="/v4/respond-to-your-letter">Respond to your letter</a>
-    </div>
-
-  </div>
-
-</header>
+We cannot find your details
 {% endblock %}
 
 {% block outerContent %}
@@ -34,7 +17,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="5" method="get" class="form">
+      
 
         <span class="nhsuk-caption-m">Confirm your entitlement</span>
         
@@ -51,17 +34,47 @@
 
           <p>You have the following options:</p>
 
+
+
+          <form action="medex-cannot-find-details" method="get" class="form">
+
+
+            <div class="nhsuk-form-group">
+    
+              <div class="nhsuk-radios nhsuk-radios">
+                <div class="nhsuk-radios__item">
+                  <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
+                  <label class="nhsuk-label nhsuk-radios__label" for="yes">
+                    Pay the total amount of £57.90
+                  </label>
+                  
+                </div>
+                <div class="nhsuk-radios__item">
+                  <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
+                  <label class="nhsuk-label nhsuk-radios__label" for="no">
+                    Send us proof to show that you were entitled to free NHS prescriptions or had a valid prescription prepayment certificate between 13 March 2023 and 31 March 2023.
+                  </label>
+    
+                </div>
+              </div>
+            </div>
+            <button class="nhsuk-button" type="submit">
+              Continue
+            </button>
+    
+          </form>
+
          
-            <ul>
+            <!-- <ul>
               
-              <lI>Pay the total amount of £135.20</lI>
+              <lI>Pay the total amount of £57.90</lI>
               <a class="nhsuk-button" href="pay-by-card">Pay now</a>
 
-              <li>Send us proof to show that you were entitled to free NHS prescriptions or had a valid prescription prepayment certificate between 16 April 2016 and 30 April 2018.</li>
+              <li>Send us proof to show that you were entitled to free NHS prescriptions or had a valid prescription prepayment certificate between 13 March 2023 and 31 March 2023.</li>
               <a class="nhsuk-button" href="we-need-proof">How to send proof</a>
             </ul>
             
-         
+          -->
 
           <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
           <p><a href="">Print this page</a></p>
