--- a/app/views/v6-pcn/no-medex-radio.html
+++ b/app/views/v6-pcn/no-medex-radio.html
@@ -17,7 +17,7 @@ You didn't have a valid medical exemption certificate
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="5" method="get" class="form">
+      
 
         <span class="nhsuk-caption-m">Confirm your entitlement</span>
         
@@ -30,18 +30,42 @@ You didn't have a valid medical exemption certificate
 
           <p>Although you didn't have a valid medical exemption certificate when you claimed a free prescription, you still have the chance to apply.</p>
 
-          <h3>What to do next</h3>
+          <h3>What do you want to do next?</h3>
+
+
+
+          <form action="medex-radios" method="get" class="form">
+
+            
+            <div class="nhsuk-form-group">
+    
+              <div class="nhsuk-radios nhsuk-radios">
+                <div class="nhsuk-radios__item">
+                    <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="credit">
+                    <label class="nhsuk-label nhsuk-radios__label" for="yes">
+                      Pay the original £9.65 prescription charge, and apply for a medical exemption certificate.
+                    </label>
+                    <div class="nhsuk-hint nhsuk-radios__hint" id="example-hints-1-item-hint">
+                      If your application is successful you won't have to pay your Penalty Charge.
+                    </div>
+                </div>
+                <div class="nhsuk-radios__item">
+                    <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
+                    <label class="nhsuk-label nhsuk-radios__label" for="no">
+                      Pay the total amount of £57.90
+                    </label>
+                    
+                </div>
+            </div>
+              </div>
+              <button class="nhsuk-button" type="submit">
+              Continue
+              </button>
+              
+              </form>
 
          
-          <ul>
-            <li>Pay the original £9.65 prescription charge, and apply for a medical exemption certificate. If your application is successful you won't have to pay your Penalty Charge</li>
-            <a class="nhsuk-button" href="how-to-pay">How to pay and apply</a>
-            <lI>Pay the total amount of £57.90</lI>
-            <a class="nhsuk-button" href="pay-by-card">Pay now</a>
-          </ul>
-          
-
-          
+         
 
      
 
