--- a/app/views/v6-pcn/what-is-your-address-dd.html
+++ b/app/views/v6-pcn/what-is-your-address-dd.html
@@ -39,7 +39,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="dd-check-answers" method="post" class="form">
+      <form action="enter-bank-details" method="post" class="form">
 
         <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
         <h1 class="nhsuk-heading-l">What is your address?</h1>
