updated direct debit journey to revert back to as and updated med/matex screens

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -199,6 +199,20 @@ NHS.UK prototype kit
                   DECS
                 </strong></td>
               </tr>
+              <tr role="row" class="nhsuk-table__row">
+                <td class="nhsuk-table__cell">Enquiry letter locked</td>
+                <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/enquiry-letter-details-locked">Enquiry letter locked</a></td>
+                <td class="nhsuk-table__cell"></strong>&nbsp;&nbsp;<strong class="nhsuk-tag nhsuk-tag--blue">
+                  PECS
+                </strong></td>
+              </tr>
+              <tr role="row" class="nhsuk-table__row">
+                <td class="nhsuk-table__cell">Enquiry letter locked - DECS</td>
+                <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/enquiry-letter-details-locked-decs">Enquiry letter locked - DECS</a></td>
+                <td class="nhsuk-table__cell"></strong>&nbsp;&nbsp;<strong class="nhsuk-tag nhsuk-tag--green">
+                  DECS
+                </strong></td>
+              </tr>
   
             </tbody>
 
