Adhoc screens updated

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -299,6 +299,24 @@ NHS.UK prototype kit
                   DECS
                 </strong></td>
               </tr>
+
+              <tbody class="nhsuk-table__body">
+                <tr role="row" class="nhsuk-table__row">
+                  <td class="nhsuk-table__cell">We could not verify the extra details you supplied</td>
+                  <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/we-could-not-verify-extra-details-enquiry">We could not verify extra details supplied</a></td>
+                  <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                    DECS
+                  </strong></td>
+                </tr>
+
+                <tbody class="nhsuk-table__body">
+                  <tr role="row" class="nhsuk-table__row">
+                    <td class="nhsuk-table__cell">You have a Hc3 certificate for limited help</td>
+                    <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/you-have-hc3-cert-for-limited-help">You have hc3 cert for limited help</a></td>
+                    <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                      DECS
+                    </strong></td>
+                  </tr>
   
             </tbody>
 
@@ -410,6 +428,28 @@ NHS.UK prototype kit
 
           </tbody>
 
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/exemption-cert-was-not-valid-enquiry-pecs">Exemption cert was not valid enquiry PECS</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
+                PECS
+              </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/exemption-cert-was-not-valid-enquiry-decs">Exemption cert was not valid enquiry DECS</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
+            </tr>
+
+          </tbody>
+
           
         </table>
       </div>
@@ -427,6 +467,7 @@ NHS.UK prototype kit
         </span>
       </summary>
       <div class="nhsuk-details__text">
+        
    
         <h3>Kickout pages</h3>
 
@@ -502,6 +543,39 @@ NHS.UK prototype kit
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/exemption-cert-not-valid-pcn-pecs">Exemption cert not valid PCN PECS</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
+                PECS
+              </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/exemption-cert-not-valid-pcn-decs">Exemption cert not valid PCN DECS</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We could not verify the extra details you supplied</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/we-could-not-verify-extra-details-pcn">We could not verify extra details PCN</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
             </tr>
 
           </tbody>
@@ -587,12 +661,56 @@ NHS.UK prototype kit
 
           </tbody>
 
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Exemption found - You may be entitled to a refund if payments were made</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/exemption-found-refund">Exemption found refund</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
+                PECS
+              </strong></td>
+            </tr>
+
+          </tbody>
+
 
           
 
           
         </table>
+        <h3>Verification pages</h3>
+
+        <table class="nhsuk-table">
+
+          <thead role="rowgroup" class="nhsuk-table__head">
+            <tr role="row">
+              <th role="columnheader" class="" scope="col">
+                Page title
+              </th>
+              <th role="columnheader" class="" scope="col">
+                URL
+              </th>
+              <th role="columnheader" class="" scope="col">
+                PECS/DECS
+              </th>
+            </tr>
+          </thead>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Penalty Charge Notice on hold</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/penalty-charge-details-on-hold">Penalty Charge details on hold</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+          </tbody>
+
+
+          </table>
+
+        
       </div>
+
+      
     </details>
 
 
