--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -704,6 +704,46 @@ NHS.UK prototype kit
             </tr>
           </tbody>
 
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We found a HC3 certificate with a higher contribution amount</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/we-found-a-hc3-cert-higher">We found a hc3 cert higher</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
+            </tr>
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We found a HC3 certificate with a lower contribution amount</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/we-found-a-hc3-cert-lower">We found a hc3 cert lower</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
+            </tr>
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">We found a HC3 certificate with the same contribution amount</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/we-found-a-hc3-cert-same">We found a hc3 cert same</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
+            </tr>
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Penalty Charge Notice details Hc3</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/penalty-charge-details-hc3-decs">Penalty Charge Notice Hc3</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
+                DECS
+              </strong></td>
+            </tr>
+          </tbody>
+
 
           </table>
 
