updated med/matex content

--- a/app/views/user-research-journies/medex-research/no-matex-radio.html
+++ b/app/views/user-research-journies/medex-research/no-matex-radio.html
@@ -30,7 +30,7 @@ You didn't have a valid medical exemption certificate
 
       <p>Although you did not have a valid maternity exemption certificate when you claimed a free NHS prescription, you
         still have the chance to apply.</p>
-        <P>If your application is successful you won't have to pay your Penalty Charge.</P>
+        <P>If your application is successful, you will only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
       <h3>What to do next</h3>
 
 
