--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -397,7 +397,7 @@ NHS.UK prototype kit
 
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-              <td class="nhsuk-table__cell">We cannot find your details</td>
+              <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm">We cannot confirm you were entitled</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
                 PECS
@@ -408,7 +408,7 @@ NHS.UK prototype kit
 
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
-              <td class="nhsuk-table__cell">We cannot find your details</td>
+              <td class="nhsuk-table__cell">We cannot confirm you were entitled</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/cannot-confirm-decs">We cannot confirm you were entitled</a></td>
               <td class="nhsuk-table__cell"></strong>&nbsp;&nbsp;<strong class="nhsuk-tag nhsuk-tag--green">
                 DECS
