--- a/app/views/v5-enquiry/adhoc-screens/exemption-cert-was-not-valid-enquiry-pecs.html
+++ b/app/views/v5-enquiry/adhoc-screens/exemption-cert-was-not-valid-enquiry-pecs.html
@@ -16,30 +16,32 @@ Your exemption certificate was not valid
 
     <form action="confirmation-page" method="post" class="form">
 
-      <span class="nhsuk-caption-l">Confirm your entitlement</span>
-      <h1 class="nhsuk-heading-xl">Your exemption certificate was not valid at the time you claimed</h1>
+      <span class="nhsuk-caption-m">Confirm your entitlement</span>
+      <h1 class="nhsuk-heading-l">Your exemption certificate was not valid at the time you claimed</h1>
 
       <p>This may have been because your certificate had expired or you did not get the certificate in time.</p>
-      <h2>What to do next</h2>
+      <h2 class="nhsuk-heading-m">If you think you were entitled</h2>
       
-      <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid prescription prepayment certificate between 02 September 2022 and 30 September 2022.</p>
+      <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription Prepayment Certificate between 02 September 2022 and 30 September 2022.</p>
       
-      <p><a href="url">How to send proof</a></p>
+      <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
       <div>
 
       </div>
-      <p>If you do not send us proof, or we cannot find your exemption, you will be sent a penalty charge notice.</p>
-      <p>If you were not entitled to free prescriptions but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="url"> Find out if you can ask for a review.</a></p>
+
+      <h2 class="nhsuk-heading-m">If you were not entitled</h2>
+      <p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
+      <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="who-can-ask-for-review"> Find out if you can ask for a review.</a></p>
 
 
 
     
-      <p><a href="url">Print this page</a></p>
+      <p><a href="">Print this page</a></p>
 
 
 
       <p><h3>Feedback</h3></p>
-      <p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
+      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 
       <p><a href="url">Leave feedback</a></p>
 
