--- a/app/views/user-research-journies/medex-research/no-medex-radio.html
+++ b/app/views/user-research-journies/medex-research/no-medex-radio.html
@@ -30,10 +30,20 @@ You didn't have a valid medical exemption certificate
 
           <p>Although you did not have a valid medical exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
           <P>If your application is successful, you will only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
-          <h3>What do you want to do next?</h3>
+        
+
+          <div class="nhsuk-warning-callout">
+            <h3 class="nhsuk-warning-callout__label">
+              <span role="text">
+                <span class="nhsuk-u-visually-hidden">Important: </span>
+                Important
+              </span>
+            </h3>
+            <p>You only have until <strong>07 June 2023</strong> to get a medical exemption certificate.</p>
+          </div>
 
 
-
+  <h3>What do you want to do next?</h3>
           <form action="medex-radios" method="get" class="form">
 
             
@@ -50,8 +60,9 @@ You didn't have a valid medical exemption certificate
                 <div class="nhsuk-radios__item">
                     <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
                     <label class="nhsuk-label nhsuk-radios__label" for="no">
-                      Pay the total amount of £57.90
+                      Pay the total amount of £57.90 if you cannot apply for a medical exemption
                     </label>
+                   
                     
                 </div>
             </div>
