--- a/app/views/user-research-journies/medex-research/what-happens-next-medex.html
+++ b/app/views/user-research-journies/medex-research/what-happens-next-medex.html
@@ -32,7 +32,7 @@ You didn't have a valid medical exemption certificate
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-             Pay your prescription charge and apply for a medical exemption certificate
+             What happens next
             </h1>
           </legend>
 
@@ -44,14 +44,9 @@ You didn't have a valid medical exemption certificate
 
           <h3>Apply for a medical exemption certificate</h3>
 
-          <div class="nhsuk-warning-callout">
-            <h3 class="nhsuk-warning-callout__label">
-              <span role="text">
-                <span class="nhsuk-u-visually-hidden">Important: </span>
-                Important
-              </span>
-            </h3>
-            <p>You only have until <strong>07 June 2023</strong> to get a medical exemption certificate.</p>
+          <div class="nhsuk-inset-text">
+            <span class="nhsuk-u-visually-hidden">Information: </span>
+            <p>You only have until the 07 May 2023 to get a medical exemption certificate.</p>
           </div>
           <p>To apply for a medical exemption certificate, speak to your doctor. They'll give you an application form.</p>
           <p>You can only apply for a medical exemption certificate if your condition is on the accepted list. If you're unsure about the name of your condition or treatment, check with your doctor.</p>
@@ -88,13 +83,6 @@ You didn't have a valid medical exemption certificate
             <span class="nhsuk-u-visually-hidden">Information: </span>
             <p>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice.</p>
           </div>
-
-          <h3>Pay the prescription charge now</h3>
-          <p>You will need to pay the original £9.65 prescription charge.</p>
-          
-         
-      
-            <a class="nhsuk-button" href="gov-pay-prescription">Pay now</a>
          
 
         
