updated med/matex content

--- a/app/views/user-research-journies/medex-research/how-to-pay-3.html
+++ b/app/views/user-research-journies/medex-research/how-to-pay-3.html
@@ -32,35 +32,50 @@ You didn't have a valid medical exemption certificate
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-             What happens next
+             Pay your prescription charge and apply for a medical exemption certificate
             </h1>
           </legend>
 
           <p>Although you didn't have a valid medical exemption certificate when you claimed a free prescription, you still have the chance to apply for one.</p>
-          <p>You will need to:</p>
-          <ul>
-            <li>Pay your £9.65 prescription charge</li>
-            <li>Apply for a medical exemption certificate</li>
-          </ul>
+
+          
+          
+          
+
+          <h3>Apply for a medical exemption certificate</h3>
+
+          <div class="nhsuk-warning-callout">
+            <h3 class="nhsuk-warning-callout__label">
+              <span role="text">
+                <span class="nhsuk-u-visually-hidden">Important: </span>
+                Important
+              </span>
+            </h3>
+            <p>You only have until <strong>07 June 2023</strong> to get a medical exemption certificate.</p>
+            <P>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice.</P>
+          </div>
+          
+
+         
           <p>After your medical exemption certificate application has been submitted, an automatic check is carried out. You do not need to telephone us.</p>
           <p>If your application is successful and you have paid the £9.65 prescription charge your Penalty Charge Notice will be closed. You'll not need to do anything more.</p>
           
-          <p>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice.</p>
 
-          
-
-          <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="pay-medex">
-             Continue
-          </a>
-
-         
+          <h3>Pay the prescription charge now</h3>
+          <p>You will need to pay the original £9.65 prescription charge.</p>
           
          
+      
+            <a class="nhsuk-button" href="gov-pay-prescription">Pay now</a>
          
 
         
          
-          
+          <h3>Feedback</h3>
+          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
+
+          <p><a href="url">Leave feedback</a></p>
+
               
               
                   
