--- a/app/views/user-research-journies/medex-research/pay-medex.html
+++ b/app/views/user-research-journies/medex-research/pay-medex.html
@@ -32,35 +32,44 @@ You didn't have a valid medical exemption certificate
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
             <h1 class="nhsuk-fieldset__heading">
-             What happens next
+             Pay your prescription charge
             </h1>
           </legend>
 
-          <p>Although you didn't have a valid medical exemption certificate when you claimed a free prescription, you still have the chance to apply for one.</p>
-          <p>You will need to:</p>
-          <ul>
-            <li>Pay your £9.65 prescription charge</li>
-            <li>Apply for a medical exemption certificate</li>
-          </ul>
-          <p>After your medical exemption certificate application has been submitted, an automatic check is carried out. You do not need to telephone us.</p>
-          <p>If your application is successful and you have paid the £9.65 prescription charge your Penalty Charge Notice will be closed. You'll not need to do anything more.</p>
-          
-          <p>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice.</p>
-
-          
-
-          <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="pay-medex">
-             Continue
-          </a>
-
          
+
+          
+          
+          
+
+
+          <div class="nhsuk-warning-callout">
+            <h3 class="nhsuk-warning-callout__label">
+              <span role="text">
+                <span class="nhsuk-u-visually-hidden">Important: </span>
+                Important
+              </span>
+            </h3>
+            <p>Once you have paid your prescription charge, you have until <strong>07 June 2023</strong> to get a medical exemption certificate.</p>
+            <p>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice.</p>
+          </div>
+          
+           
+
+          
+
+          <p>You will need to pay the original £9.65 prescription charge.</p>
           
          
+      
+            <a class="nhsuk-button" href="gov-pay-prescription">Pay now</a>
+            <p><a>Cancel</a></p>
          
 
         
          
           
+
               
               
                   
