--- a/app/views/v5-enquiry/cannot-find-your-details.html
+++ b/app/views/v5-enquiry/cannot-find-your-details.html
@@ -54,7 +54,7 @@ We cannot find your details
       </dl>
       
 
-        <a href="respond-to-your-letter" class="nhsuk-button">Try again</a>
+        <a href="enter-reference-number" class="nhsuk-button">Try again</a>
         <p>If your answers are correct, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us</a> if you have received a letter about claiming help with your health costs.</p>
          
 
