--- a/app/views/v5-enquiry/you-will-be-sent-pcn.html
+++ b/app/views/v5-enquiry/you-will-be-sent-pcn.html
@@ -14,7 +14,7 @@ Start page template - NHS.UK prototype kit
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <span class="nhsuk-caption-m">Your details</span>
+    <span class="nhsuk-caption-m">Confirm your entitlement</span>
     <h2>
       Not entitled to free NHS prescriptions
     </h2>
