--- a/app/views/v5-enquiry/adhoc-screens/case-closed.html
+++ b/app/views/v5-enquiry/adhoc-screens/case-closed.html
@@ -9,13 +9,14 @@ An exemption has been found
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <h1 class="nhsuk-heading-l">Your case has already been closed</h1>
+    
 
 
 
 
     <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
       <div class="nhsuk-card__content">
+        <h1 class="nhsuk-heading-l" style="text-align: center; color: white;">Your case has already been closed</h1>
         <h2 class="nhsuk-card__content" style="text-align: center; color: white;">You do not need to do anything else.
         </h2>
       </div>
@@ -34,7 +35,7 @@ An exemption has been found
 
 
 
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any other queries.</a></p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any other queries</a>.</p>
     <p><a href="">Print this page</a></p>
 
   </div>
