--- a/app/views/v5-enquiry/adhoc-screens/case-closed.html
+++ b/app/views/v5-enquiry/adhoc-screens/case-closed.html
@@ -16,9 +16,14 @@ An exemption has been found
 
     <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
       <div class="nhsuk-card__content">
-        <h1 class="nhsuk-heading-l" style="text-align: center; color: white;">Your case has already been closed</h1>
-        <h2 class="nhsuk-card__content" style="text-align: center; color: white;">You do not need to do anything else.
-        </h2>
+
+        <h1 class="nhsuk-panel__title nhsuk-heading-l" style="text-align: center; color: white;">
+          Your case has already been closed
+        </h1>
+        <p class="nhsuk-panel__body" style="text-align: center; color: white;">
+          You do not need to do anything else.
+        </p>
+        
       </div>
     </div>
 
