--- a/app/views/v5-enquiry/what-you-want-to-do-next.html
+++ b/app/views/v5-enquiry/what-you-want-to-do-next.html
@@ -36,7 +36,7 @@ What do you want to do next?
                 </label>
             </div>
             <div class="nhsuk-hint" id="example-with-hint-text-hint">
-              We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.
+              We'll check if you were getting a qualifying benefit, or had a valid exemption or prepayment certificate.
             </div>
             <div class="nhsuk-radios__item">
               <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="pay">
