updated content on adhoc screens

--- a/app/views/v5-enquiry/adhoc-screens/exemption-expired.html
+++ b/app/views/v5-enquiry/adhoc-screens/exemption-expired.html
@@ -22,16 +22,16 @@ Your exemption certificate was not valid
       <p>This may have been because your certificate had expired or you did not get the certificate in time.</p>
       <h2 class="nhsuk-heading-m">If you think you were entitled</h2>
       
-      <p>Send us proof to show that you were entitled to free or reduced cost NHS dental treatment between 02 September 2022 and 30 September 2022.</p>
+      <p>Send us proof to show that you were entitled to free NHS prescriptions or had a valid Prescription Prepayment Certificate between 02 September 2022 and 30 September 2022.</p>
       
-      <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
+      <p><a href="/v5-enquiry/we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
       <div>
 
       </div>
 
       <h2 class="nhsuk-heading-m">If you were not entitled</h2>
       <p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
-      <p>If you were not entitled to free or reduced cost NHS dental treatment but have an exceptional reason why you made the claim, you can ask us to review your enquiry letter. <a href="who-can-ask-for-review"> Find out if you can ask for a review.</a></p>
+      <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your Penalty Charge Notice. <a href="/v5-enquiry/who-can-ask-for-review"> Find out if you can ask for a review</a>.</p>
 
 
 
@@ -43,7 +43,7 @@ Your exemption certificate was not valid
       <p><h3>Feedback</h3></p>
       <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 
-      <p><a href="url">Leave feedback</a></p>
+      <p><a href="https://online1.snapsurveys.com/interview/c65416e2-df71-4e71-a691-315b9abb4eae">Leave feedback</a></p>
 
 
 
