--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -431,7 +431,7 @@ NHS.UK prototype kit
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/exemption-cert-was-not-valid-enquiry-pecs">Exemption cert was not valid enquiry PECS</a></td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/exemption-expired">Exemption expired PECS</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--blue">
                 PECS
               </strong></td>
@@ -442,7 +442,7 @@ NHS.UK prototype kit
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">Your exemption certificate was not valid at the time you claimed</td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/exemption-cert-was-not-valid-enquiry-decs">Exemption cert was not valid enquiry DECS</a></td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/exemption-expired-decs">Exemption expired DECS</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag nhsuk-tag--green">
                 DECS
               </strong></td>
