--- a/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
+++ b/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
@@ -26,7 +26,7 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <span class="nhsuk-caption-m">Your details</span>
+      <span class="nhsuk-caption-m"></span>
       <h1 class="nhsuk-heading-l">
        More information needed
       </h1>
