--- a/app/views/v5-enquiry/you-will-be-sent-pcn.html
+++ b/app/views/v5-enquiry/you-will-be-sent-pcn.html
@@ -14,7 +14,7 @@ Start page template - NHS.UK prototype kit
 
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
-    <span class="nhsuk-caption-m">Confirm your entitlement</span>
+
     <h2>
       Not entitled to free NHS prescriptions
     </h2>
@@ -33,7 +33,7 @@ Start page template - NHS.UK prototype kit
       <div class="nhsuk-details__text">
         <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you
           can ask us to review your case.</p>
-        <p><a href="">Find out if you can ask for a review.</a> </p>
+        <p><a href="who-can-ask-for-review">Find out if you can ask for a review</a>. </p>
 
       </div>
     </details>
