updated med/matex content

--- a/app/views/user-research-journies/medex-research/medical-conditions.html
+++ b/app/views/user-research-journies/medex-research/medical-conditions.html
@@ -28,7 +28,9 @@ Do you have any of these medical conditions or disabilities?
 
 
     <span class="nhsuk-caption-m">Confirm your entitlement</span>
-    <h1 class="nhsuk-heading-l">Do you have any of these medical conditions or disabilities?</h1>
+    <h1 class="nhsuk-heading-l">Do you have any of these medical conditions?</h1>
+
+    <p>These are the conditions that entitle you to apply for a medical exemption certificate.</p>
     <div class="nhsuk-form-group">
 
       <div class="nhsuk-inset-text">
@@ -46,7 +48,7 @@ Do you have any of these medical conditions or disabilities?
         <li><strong>Hypoparathyroidism</strong><br>Which means your parathyroid glands produce too little parathyroid hormone.</li>
        
      
-        <li><strong>Myasthenia gravis</strong><br>Where ana autoimmune condition affects your nerves and muscles.</li>
+        <li><strong>Myasthenia gravis</strong><br>Where an autoimmune condition affects your nerves and muscles.</li>
         <li><strong>Myxoedema</strong><br>For example, hypothyroidism which needs thyroid hormone replacement.</li>
       </ul>
 
