--- a/app/views/v6-pcn/how-to-pay-2.html
+++ b/app/views/v6-pcn/how-to-pay-2.html
@@ -36,7 +36,7 @@ You didn't have a valid medical exemption certificate
             </h1>
           </legend>
 
-          <p>Although you didn't have a valid medical exemption certificate when you claimed a free prescription, you still have the chance to apply for one.</p>
+          <p>Although you did not have a valid medical exemption certificate when you claimed a free prescription, you still have the chance to apply for one.</p>
 
           <h3>Pay the prescription charge now</h3>
           <p>You will need to pay the original £9.65 prescription charge.</p>
@@ -59,7 +59,7 @@ You didn't have a valid medical exemption certificate
           <details class="nhsuk-details">
             <summary class="nhsuk-details__summary">
               <span class="nhsuk-details__summary-text">
-                List of accepted medical conditions
+                Check the full list of accepted medical conditions
               </span>
             </summary>
             <div class="nhsuk-details__text">
@@ -74,7 +74,7 @@ You didn't have a valid medical exemption certificate
                 <li><strong>Hypoparathyroidism</strong><br>Which means your parathyroid glands produce too little parathyroid hormone.</li>
                
              
-                <li><strong>Myasthenia gravis</strong><br>Where ana autoimmune condition affects your nerves and muscles.</li>
+                <li><strong>Myasthenia gravis</strong><br>Where an autoimmune condition affects your nerves and muscles.</li>
                 <li><strong>Myxoedema</strong><br>For example, hypothyroidism which needs thyroid hormone replacement.</li>
               </ul>
           
@@ -82,8 +82,8 @@ You didn't have a valid medical exemption certificate
           </details>
 
           <h3>What happens next?</h3>
-          <p>After your medical exemption certificate application has been submitted, an automatic check is carried out. You do not need to telephone us.</p>
-          <p>If your application is successful and you have paid the £9.65 prescription charge your Penalty Charge Notice will be closed. You'll not need to do anything more.</p>
+          <p>After your medical exemption certificate application has been submitted, an automatic check is carried out. You do not need to contact us.</p>
+          <p>If your application is successful and you pay the £9.65 prescription charge your Penalty Charge Notice will be closed. You'll not need to do anything more.</p>
           <div class="nhsuk-inset-text">
             <span class="nhsuk-u-visually-hidden">Information: </span>
             <p>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice.</p>
@@ -92,10 +92,7 @@ You didn't have a valid medical exemption certificate
 
         
          
-          <h3>Feedback</h3>
-          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-
-          <p><a href="url">Leave feedback</a></p>
+          
 
               
               
