--- a/app/views/v6-pcn/medical-conditions.html
+++ b/app/views/v6-pcn/medical-conditions.html
@@ -46,7 +46,7 @@ Do you have any of these medical conditions or disabilities?
         <li><strong>Hypoparathyroidism</strong><br>Which means your parathyroid glands produce too little parathyroid hormone.</li>
        
      
-        <li><strong>Myasthenia gravis</strong><br>Where ana autoimmune condition affects your nerves and muscles.</li>
+        <li><strong>Myasthenia gravis</strong><br>Where an autoimmune condition affects your nerves and muscles.</li>
         <li><strong>Myxoedema</strong><br>For example, hypothyroidism which needs thyroid hormone replacement.</li>
       </ul>
 
