--- a/app/views/v6-pcn/no-medex-radio.html
+++ b/app/views/v6-pcn/no-medex-radio.html
@@ -37,7 +37,7 @@ You didn't have a valid medical exemption certificate
           </legend>
 
           <p>Although you did not have a valid medical exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
-          <P>If your application is successful you won't have to pay your Penalty Charge.</P>
+          <P>If your application is successful, you'll only have to pay the original prescription charge. You'll not have to pay your Penalty Charge.</P>
           <h3>What do you want to do next?</h3>
 
 
@@ -81,11 +81,7 @@ You didn't have a valid medical exemption certificate
 
           <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
           <p><a href="">Print this page</a></p>
-          <h3>Feedback</h3>
-          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-
-          <p><a href="url">Leave feedback</a></p>
-
+          
               
               
                   
