--- a/app/views/user-research-journies/medex-research/how-to-pay-2.html
+++ b/app/views/user-research-journies/medex-research/how-to-pay-2.html
@@ -36,13 +36,15 @@ You didn't have a valid medical exemption certificate
             </h1>
           </legend>
 
-          <p>Although you didn't have a valid medical exemption certificate when you claimed a free prescription, you still have the chance to apply for one.</p>
+
+          <p>You can use this service to pay the original £9.65 prescription charge.</p>
+         
+          <p>To apply for a medical exemption certificate, speak to your doctor. They'll give you an application form.</p>
+          
+          
+          
 
           
-          
-          
-
-          <h3>Apply for a medical exemption certificate</h3>
 
           <div class="nhsuk-warning-callout">
             <h3 class="nhsuk-warning-callout__label">
@@ -51,15 +53,16 @@ You didn't have a valid medical exemption certificate
                 Important
               </span>
             </h3>
-            <p>You only have until <strong>07 June 2023</strong> to get a medical exemption certificate.</p>
+            <p>You have until <strong>7 June 2023</strong> to get a medical exemption certificate.</p>
+            <p>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice (PCN).</p>
           </div>
-          <p>To apply for a medical exemption certificate, speak to your doctor. They'll give you an application form.</p>
+          
           <p>You can only apply for a medical exemption certificate if your condition is on the accepted list. If you're unsure about the name of your condition or treatment, check with your doctor.</p>
 
           <details class="nhsuk-details">
             <summary class="nhsuk-details__summary">
               <span class="nhsuk-details__summary-text">
-                List of accepted medical conditions
+                Check the full list of accepted medical conditions
               </span>
             </summary>
             <div class="nhsuk-details__text">
@@ -81,29 +84,22 @@ You didn't have a valid medical exemption certificate
             </div>
           </details>
 
-          <h3>What happens next?</h3>
-          <p>After your medical exemption certificate application has been submitted, an automatic check is carried out. You do not need to telephone us.</p>
-          <p>If your application is successful and you have paid the £9.65 prescription charge your Penalty Charge Notice will be closed. You'll not need to do anything more.</p>
-          <div class="nhsuk-inset-text">
-            <span class="nhsuk-u-visually-hidden">Information: </span>
-            <p>If you are not eligible for a medical exemption certificate you'll need to pay the full amount of the Penalty Charge Notice.</p>
-          </div>
-
+          
           <h3>Pay the prescription charge now</h3>
-          <p>You will need to pay the original £9.65 prescription charge.</p>
+          <p>You'll need to pay the original £9.65 prescription charge.</p>
           
          
       
             <a class="nhsuk-button" href="gov-pay-prescription">Pay now</a>
-         
+            <h3>What happens next?</h3>
+            <p>After your medical exemption certificate application has been submitted, an automatic check is carried out. You do not need to contact us.</p>
+            <p>If your application is successful and you pay the £9.65 prescription charge your PCN will be closed. You'll not need to do anything more.</p>
+            
+  
 
         
          
-          <h3>Feedback</h3>
-          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-
-          <p><a href="url">Leave feedback</a></p>
-
+        
               
               
                   
