--- a/app/views/user-research-journies/medex-research/no-medex-radio.html
+++ b/app/views/user-research-journies/medex-research/no-medex-radio.html
@@ -37,18 +37,13 @@ You didn't have a valid medical exemption certificate
           </legend>
 
           <p>Although you did not have a valid medical exemption certificate when you claimed a free NHS prescription, you still have the chance to apply.</p>
-          <P>If your application is successful, you will only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
+
+          <p>You have until <strong>7 June 2023</strong> to get a medical exemption certificate.</p>
+          <P>If your application is successful, you'll only have to pay the original prescription charge. You will not have to pay your penalty charge. </P>
         
 
-          <div class="nhsuk-warning-callout">
-            <h3 class="nhsuk-warning-callout__label">
-              <span role="text">
-                <span class="nhsuk-u-visually-hidden">Important: </span>
-                Important
-              </span>
-            </h3>
-            <p>You only have until <strong>07 June 2023</strong> to get a medical exemption certificate.</p>
-          </div>
+            
+         
 
 
   <h3>What do you want to do next?</h3>
@@ -68,7 +63,7 @@ You didn't have a valid medical exemption certificate
                 <div class="nhsuk-radios__item">
                     <input class="nhsuk-radios__input" id="debit-card" name="debit" type="radio" value="direct">
                     <label class="nhsuk-label nhsuk-radios__label" for="no">
-                      Pay the total amount of £57.90 if you cannot apply for a medical exemption
+                      Pay the full penalty charge amount of £57.90
                     </label>
                    
                     
@@ -92,10 +87,7 @@ You didn't have a valid medical exemption certificate
 
           <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your Penalty Charge Notice. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
           <p><a href="">Print this page</a></p>
-          <h3>Feedback</h3>
-          <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-
-          <p><a href="url">Leave feedback</a></p>
+         
 
               
               
