updated med/matex content

--- a/app/views/v6-pcn/partial-payment-made-medmatex.html
+++ b/app/views/v6-pcn/partial-payment-made-medmatex.html
@@ -64,7 +64,7 @@ Payment confirmation
               You still need to pay
             </dt>
             <dd class="nhsuk-summary-list__value">
-              <p >£X-Amount</p>
+              <p >£48.25</p>
             </dd>
         
             
@@ -79,7 +79,7 @@ Payment confirmation
       
       </div>
       <h3>Further payments</h3>
-      <p>You can use this service to pay the remaining amount of <strong>£X-Amount</strong>.</p>
+      <p>You can use this service to pay the remaining amount of <strong>£48.25</strong>.</p>
 
       <a href="payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
         Make another payment
